[gd_scene load_steps=4 format=3 uid="uid://rnxmwfu7lte7"]

[ext_resource type="Script" path="res://scripts/Tank.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bh8n5av5qqf72" path="res://assets/player.png" id="2_7oxhd"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(174, 135)

[node name="Tank" type="CharacterBody2D"]
script = ExtResource("1")

[node name="TankCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 11)
rotation = -1.5708
shape = SubResource("1")

[node name="TankSprite" type="Sprite2D" parent="."]
rotation = -1.5708
texture = ExtResource("2_7oxhd")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(0, -119)
scale = Vector2(1.79738, -41.911)

[node name="Bullets" type="Node2D" parent="."]

[node name="ShootTimer" type="Timer" parent="."]
autostart = true

[node name="RapidTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="RapidFireTimer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="press_shoot" from="." to="." method="_on_press_shoot"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="RapidTimer" to="." method="_on_rapid_timer_timeout"]
[connection signal="timeout" from="RapidFireTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="RapidFireTimer" to="." method="_on_rapid_fire_timer_timeout"]
